tests/snapshots/gateway/studio/repo_symbol_search_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
assertion_line: 9
expression: value
---
{
  "repo_id": "gateway-sync",
  "symbol_hits": [
    {
      "audit_status": "unreviewed",
      "hierarchical_uri": "wendao://repo/unknown/gateway-sync/api/src:GatewaySyncPkg.jl/repo:gateway-sync:symbol:GatewaySyncPkg.solve",
      "hierarchy": [
        "src",
        "GatewaySyncPkg.jl"
      ],
      "projection_page_ids": [
        "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
      ],
      "rank": 1,
      "saliency_score": 1.0,
      "score": 1.0,
      "symbol": {
        "audit_status": "unreviewed",
        "kind": "function",
        "line_end": null,
        "line_start": null,
        "module_id": "repo:gateway-sync:module:GatewaySyncPkg",
        "name": "solve",
        "path": "src/GatewaySyncPkg.jl",
        "qualified_name": "GatewaySyncPkg.solve",
        "repo_id": "gateway-sync",
        "signature": "solve() = nothing",
        "symbol_id": "repo:gateway-sync:symbol:GatewaySyncPkg.solve",
        "verification_state": "unknown"
      },
      "verification_state": "unknown"
    }
  ],
  "symbols": [
    {
      "audit_status": "unreviewed",
      "kind": "function",
      "line_end": null,
      "line_start": null,
      "module_id": "repo:gateway-sync:module:GatewaySyncPkg",
      "name": "solve",
      "path": "src/GatewaySyncPkg.jl",
      "qualified_name": "GatewaySyncPkg.solve",
      "repo_id": "gateway-sync",
      "signature": "solve() = nothing",
      "symbol_id": "repo:gateway-sync:symbol:GatewaySyncPkg.solve",
      "verification_state": "unknown"
    }
  ]
}
