tests/snapshots/gateway/studio/repo_symbol_search_endpoint_modelica_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "repo_id": "modelica-gateway-symbol-search",
  "symbol_hits": [
    {
      "hierarchical_uri": "wendao://repo/msl/modelica-gateway-symbol-search/api/Controllers:PI.mo/repo:modelica-gateway-symbol-search:symbol:Projectionica.Controllers.PI",
      "hierarchy": [
        "Controllers",
        "PI.mo"
      ],
      "implicit_backlink_items": [
        {
          "id": "repo:modelica-gateway-symbol-search:doc:Controllers/PI.mo#annotation.documentation",
          "kind": "documents",
          "path": "Controllers/PI.mo#annotation.documentation",
          "title": "PI documentation"
        }
      ],
      "implicit_backlinks": [
        "repo:modelica-gateway-symbol-search:doc:Controllers/PI.mo#annotation.documentation"
      ],
      "projection_page_ids": [
        "repo:modelica-gateway-symbol-search:projection:reference:doc:repo:modelica-gateway-symbol-search:doc:Controllers/PI.mo#annotation.documentation",
        "repo:modelica-gateway-symbol-search:projection:reference:symbol:repo:modelica-gateway-symbol-search:symbol:Projectionica.Controllers.PI"
      ],
      "rank": 1,
      "saliency_score": 0.4,
      "score": 1.0,
      "symbol": {
        "kind": "type",
        "line_end": 2,
        "line_start": 2,
        "module_id": "repo:modelica-gateway-symbol-search:module:Projectionica.Controllers",
        "name": "PI",
        "path": "Controllers/PI.mo",
        "qualified_name": "Projectionica.Controllers.PI",
        "repo_id": "modelica-gateway-symbol-search",
        "signature": "model PI",
        "symbol_id": "repo:modelica-gateway-symbol-search:symbol:Projectionica.Controllers.PI",
        "verification_state": "verified"
      },
      "verification_state": "verified"
    }
  ],
  "symbols": [
    {
      "kind": "type",
      "line_end": 2,
      "line_start": 2,
      "module_id": "repo:modelica-gateway-symbol-search:module:Projectionica.Controllers",
      "name": "PI",
      "path": "Controllers/PI.mo",
      "qualified_name": "Projectionica.Controllers.PI",
      "repo_id": "modelica-gateway-symbol-search",
      "signature": "model PI",
      "symbol_id": "repo:modelica-gateway-symbol-search:symbol:Projectionica.Controllers.PI",
      "verification_state": "verified"
    }
  ]
}
