tests/snapshots/gateway/studio/repo_sync_endpoint_invalid_mode_error.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "code": "INVALID_MODE",
  "message": "unsupported repo sync mode `bogus`"
}
