tests/snapshots/gateway/studio/repo_sync_endpoint_missing_repo_error.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "code": "MISSING_REPO",
  "message": "`repo` is required"
}
